--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,3 +39,6 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
   end
 end
+
+# Override Firebase SDK Version
+$FirebaseSDKVersion = '8.9.0'
