--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,15 @@ environment:
 dependencies:
   cloud_firestore: ^3.1.4
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
   firebase_core: ^1.10.5
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.0.1
-  get: ^4.5.1
+  get: ^4.6.1
   google_fonts: ^2.1.0
-  velocity_x: ^3.3.0
+  intl: ^0.17.0
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_lints: ^1.0.0
