--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   firebase_core: ^1.10.5
+  firebase_picture_uploader: ^1.3.1
+  firebase_storage: ^10.2.3
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.0.1
